# pfamserver

./: .bumpversion.cfg  .env  .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  MANIFEST.in  Makefile  Procfile  README.md  db_view_cache.sql  deploy.sh  docker-compose.dev.yml  docker-compose.traefik.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pytest.ini  requirements.development.txt  requirements.txt  requirements_development.txt  setup.cfg  setup.py  tox.ini  update_traefik_config.sh  version.py  webpack.config.js  wsgi.py
backend/: .dockerignore  .flake8  Dockerfile  Dockerfile.dev  Dockerfile.poetry  Makefile  flasky.py  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  wsgi.py
backend/pfamserver/: __init__.py  database.py  exceptions.py  extensions.py
backend/pfamserver/api/v0/: __init__.py  pfam.py  protein_sequence.py  schemas.py  uniprot.py  version.py
backend/pfamserver/commands/: db.py  db_build_cache.sql  db_shrinked_downloader.sh  unused_columns.py
backend/pfamserver/config/: base.py  development.py  production.py  staging.py  testing.py
backend/pfamserver/models/: pdb.py  pdb_pfam_a_reg.py  pfam_a.py  pfam_a_pfamseq.py  pfam_a_reg_full_significant.py  pfamseq.py  uniprot.py  uniprot_reg_full.py
backend/pfamserver/public/: __init__.py
backend/pfamserver/services/: notification_service.py  pdb_service.py  pfam_service.py  sequence_service.py  uniprot_service.py  version_service.py
backend/tests/: conftest.py  factories.py
backend/tests/fixtures/: base.py  pdb.py  pdb_pfam_a_reg.py  pfam_a.py  pfam_a_pfamseq.py  pfamseq.py  sequences.py  static.py  uniprot.py  uniprot_reg_full.py  version.py
backend/tests/services/: test_pdb_service.py  test_pfam_service.py  test_sample.py  test_sequence_service.py  test_uniprot_service.py  test_version_service.py
backend/tests/static/: test_main_app.py
(+122 files in other folders)
